--- a/tasks/nginxplus.yml
+++ b/tasks/nginxplus.yml
@@ -2,6 +2,7 @@
   git:
     repo: 'https://github.com/nginxinc/nginx-openshift-router'
     dest: "{{ git-path }}/nginx-openshift-router"
+    version: master
   ignore_errors: true
 
 - name: Copy NGINX license files to repository
@@ -16,24 +17,30 @@
   command: docker build -t nginx-plus-openshift-router:0.2 .
   args:
     chdir: "{{ git-path }}/nginx-openshift-router/src/nginx-plus"
+  changed_when: false
 
 - name: Log in as developer
   command: oc login -u developer -p developer -n default
+  changed_when: false
 
 - name: Logon to MiniShift private repository
   command: docker login -u developer -p $(oc whoami -t) $(minishift openshift registry)
+  changed_when: false
 
 - name: Upload NGINX Plus image to private docker repository
   command: docker login -p {{ docker-key }} -e unused -u unused $(minishift docker registry)
   args:
     chdir: "{{ git-path }}/nginx-openshift-router/src/nginx-plus"
+  changed_when: false
 
 - name: Tag NGINX Plus docker image
   command: docker tag nginx-plus-openshift-router:0.2 $(minishift openshift registry)/openshift/nginx-plus-openshift-router:0.2
   args:
     chdir: "{{ git-path }}/nginx-openshift-router/src/nginx-plus"
+  changed_when: false
 
 - name: Push NGINX Plus docker image
   command: docker push $(minishift openshift registry)/openshift/nginx-plus-openshift-router:0.2
   args:
     chdir: "{{ git-path }}/nginx-openshift-router/src/nginx-plus"
+  changed_when: false
