--- a/tasks/Darwin_driver.yml
+++ b/tasks/Darwin_driver.yml
@@ -3,28 +3,30 @@
 - name: Check if docker-machine-driver-xhyve is installed
   command: brew info --installed docker-machine-driver-xhyve
   register: output
+  changed_when: False
 
-- name: Install docker-machine-driver-xhyve 
-  homebrew: 
+- name: Install docker-machine-driver-xhyve
+  homebrew:
     name: docker-machine-driver-xhyve
     state: present
-  when: 
-    - "'Not installed' in output.stdout" 
+  when:
+    - "'Not installed' in output.stdout"
     - not use-hyperkit
 
 - name: Install docker-machine-driver-hyperkit
   homebrew:
     name: hyperkit
     state: present
-  when: 
+  when:
     - "'Not installed' in output.stdout"
     - use-hyperkit
 
 - name: Get brew prefix
   command: brew --prefix
   register: prefix
+  changed_when: False
 
-- name: Install docker-machine-driver-hyperkit binary 
+- name: Install docker-machine-driver-hyperkit binary
   become: yes
   become_user: root
   get_url:
@@ -33,18 +35,18 @@
     mode: 0755
     owner: root
     group: wheel
-  when: 
+  when:
     - "'Not installed' in output.stdout"
     - use-hyperkit
 
 - name: Set owner and permissions for docker-machine-driver-xyhve
   become: yes
   become_user: root
-  file: 
+  file:
     path: "{{ prefix.stdout }}/opt/docker-machine-driver-xhyve/bin/docker-machine-driver-xhyve"
     owner: root
     group: wheel
     mode: "u+s"
-  when: 
-    - "'Not installed' in output.stdout" 
+  when:
+    - "'Not installed' in output.stdout"
     - not use-hyperkit"
