--- a/tasks/checkdir.yml
+++ b/tasks/checkdir.yml
@@ -1,12 +1,13 @@
 - name: Check if git path exists
   stat:
-    path: '{{ git-path }}' 
+    path: '{{ git-path }}'
   register: result
 
 - name: Display message if path doesn't exist
   debug:
     msg: 'Failed to find {{ git-path }}. Please fix this before continuing'
-  when: result.stat.exists == false
+  when:
+    - not result.stat.exists
 
 - name: Verify NGINX Plus licsense is present
   copy:
