--- a/tasks/create_objects.yml
+++ b/tasks/create_objects.yml
@@ -1,21 +1,24 @@
 - name: Create a temp dir
-  command: mktemp -d -t ansible.XXXXXXXXXX
+  tempfile:
+    state: directory
+    prefix: build
   register: temp_output
 
 - name: Set tmp_path
   set_fact:
-    tmp_path: "{{ temp_output.stdout }}"
+    tmp_path: "{{ temp_output.path.stdout }}"
 
-- name: Template route.yml 
-  template: 
+- name: Template route.yml
+  template:
     src: route.j2.yml
-    dest: "{{ tmp_path }}/route.yml" 
+    dest: "{{ tmp_path }}/route.yml"
 
 - name: Create the route
-  command: oc create -f route.yml 
+  command: oc create -f route.yml
   args:
-    chdir: "{{ tmp_path }}" 
+    chdir: "{{ tmp_path }}"
   ignore_errors: yes
+  changed_when: false
 
 - name: Remove the temp directory
   file:
