--- a/tasks/isrunning.yml
+++ b/tasks/isrunning.yml
@@ -2,15 +2,11 @@
   command: minishift status
   register: minishift_state
   ignore_errors: yes
+  changed_when: false
 
-- name: Message for minishift is already running 
-  debug:
+- name: Minishift is already running - no restart
+  fail:
     msg: "Minishift is already running. Use minishift_restart to continue."
-  when: "'Running' in minishift_state.stdout and not minishift_restart"
-
-- name: Stop playbook, if running and not restart
-  assert:
-    that: true == false
   when: "'Running' in minishift_state.stdout and not minishift_restart"
 
 - name: Message for shutting down minishift
@@ -21,15 +17,17 @@
 - name: Shutdown minishift
   command: minishift stop
   when: "'Running' in minishift_state.stdout"
+  changed_when: false
 
 - name: Deleting minishift
   command: minishift delete --force
   when: minishift_delete
   ignore_errors: yes
   become: yes
+  changed_when: false
 
 - name: Remove ~/.minishift
-  file: 
+  file:
     path: ~/.minishift
     state: absent
   when: minishift_delete
