--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,15 +22,21 @@
 
 # Lately seems to always end with a non-zero return code, even on success
 - name: Run minishift
-  shell: "minishift start {{ minishift_start_options | join(' ') }} >/tmp/minishift.out 2>&1"
+  shell: "set -o pipefail && true | minishift start {{ minishift_start_options | join(' ') }} >/tmp/minishift.out 2>&1"
   environment:
     # Enable mounting /Users to the VM on OSX
     XHYVE_VIRTIO_9P: true
+  args:
+    executable: /bin/bash
   ignore_errors: yes
+  changed_when: false
 
 - name: Grab the minishift output, stripping any special chars
-  shell: cat /tmp/minishift.out | tr -dc '[:print:]\n\r' | grep -v '==='
+  shell: "set -o pipefail && true | cat /tmp/minishift.out | tr -dc '[:print:]\n\r' | grep -v '==='"
+  args:
+    executable: /bin/bash
   register: minishift_out
+  changed_when: false
 
 - name: Cleanup output file
   file:
@@ -47,7 +53,10 @@
   when: not oc_client.stat.exists or openshift_force_client_copy
 
 - name: Switch the kube config context
-  shell: "{{ openshift_client_dest }}/oc config use-context /$(minishift ip | tr . -):8443/developer"
+  shell: "set -o pipefail && true | {{ openshift_client_dest }}/oc config use-context /$(minishift ip | tr . -):8443/developer"
+  args:
+    executable: /bin/bash
+  changed_when: false
 
 - name: Give cluster-admin to developer
   include_tasks: grant_admin.yml
