--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,6 +21,9 @@ galaxy_info:
     - bionic
     - cosmic
     - xenial
+  - name: EL
+    versions:
+    - 7
   galaxy_tags:
   - oc
   - openshift
