--- a/tasks/Darwin_driver.yml
+++ b/tasks/Darwin_driver.yml
@@ -1,7 +1,7 @@
 # Darwin_driver.yml 
 
 - name: Check if docker-machine-driver-xhyve is installed
-  command: brew info --installed docker-machine-driver-xhyve
+  command: brew info --installed docker-machine-driver-xhyve --json
   register: output
   changed_when: False
 
