--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Check if directories exist
-  import_tasks: checkdir.yml
+#- name: Check if directories exist
+#  import_tasks: checkdir.yml
 
 - name: Install Docker Machine binary
   include_tasks: "{{ ansible_os_family }}_driver.yml"
