--- a/tasks/nginxoss.yml
+++ b/tasks/nginxoss.yml
@@ -1,14 +1,30 @@
+- name: Create a temp dir
+  tempfile:
+    state: directory
+    prefix: build
+  register: temp_output
+
+- name: Set tmp_path
+  set_fact:
+    tmp_path: "{{ temp_output.path }}"
+
 - name: Clone nginx openshift router repository
   git:
     repo: 'https://github.com/nginxinc/nginx-openshift-router'
-    dest: "{{ git-path }}/nginx-openshift-router"
+    dest: "{{ tmp_path }}/nginx-openshift-router"
     version: master
   ignore_errors: true
 
 - name: Build NGINX docker image
   command: docker build -t nginx-openshift-router:0.2 .
   args:
-    chdir: "{{ git-path }}/nginx-openshift-router/src/nginx"
+    chdir: "{{ tmp_path }}/nginx-openshift-router/src/nginx"
+  changed_when: false
+
+- name: Set minishift envirnomental variables
+  shell: "set -o pipefail && true | eval $(minishift oc-env)"
+  args:
+    executable: /bin/bash
   changed_when: false
 
 - name: Log in as developer
@@ -16,23 +32,22 @@
   changed_when: false
 
 - name: Logon to MiniShift private repository
-  command: docker login -u developer -p $(oc whoami -t) $(minishift openshift registry)
-  changed_when: false
-
-- name: Upload NGINX image to private docker repository
-  command: docker login -p {{ docker-key }} -e unused -u unused $(minishift docker registry)
-  args:
-    chdir: "{{ git-path }}/nginx-openshift-router/src/nginx"
+  command: "docker login -u developer -p $(oc whoami -t) $(minishift openshift registry)"
   changed_when: false
 
 - name: Tag NGINX docker image
   command: docker tag nginx-openshift-router:0.2 $(minishift openshift registry)/openshift/nginx-openshift-router:0.2
   args:
-    chdir: "{{ git-path }}/nginx-openshift-router/src/nginx"
+    chdir: "{{ tmp_path }}/nginx-openshift-router/src/nginx"
   changed_when: false
 
 - name: Push NGINX docker image
   command: docker push $(minishift openshift registry)/openshift/nginx-openshift-router:0.2
   args:
-    chdir: "{{ git-path }}/nginx-openshift-router/src/nginx"
+    chdir: "{{ tmp_path }}/nginx-openshift-router/src/nginx"
   changed_when: false
+
+- name: Remove the temp directory
+  file:
+    path: "{{ tmp_path }}"
+    state: absent
