--- a/tasks/checkdir.yml
+++ b/tasks/checkdir.yml
@@ -1,20 +1,18 @@
 - name: Check if git path exists
   stat:
-    path: "{{ git-path }}"
+    path: "{{ git_path }}"
   register: result
 
 - name: Display message if path doesn't exist
   debug:
-    msg: 'Failed to find {{ git-path }}. Please fix this before continuing'
-  when:
-    - not result.stat.exists
+    msg: 'Failed to find {{ git_path }}. Please fix this before continuing'
+  when: not result.stat.exists
 
 - name: Verify NGINX Plus licsense is present
   copy:
     src: "{{ role_path }}/files/{{ item }}"
-    dest: "{{ git-path }}/nginx-openshift-router/src/nginx-plus/{{ item }}"
+    dest: "{{ git_path }}/nginx-openshift-router/src/nginx-plus/{{ item }}"
   with_items:
     - nginx-repo.crt
     - nginx-repo.key
-  when:
-    - nginx-plus
+  when: nginx_plus
