--- a/tasks/install_minishift.yml
+++ b/tasks/install_minishift.yml
@@ -22,12 +22,12 @@
 - name: Download the asset
   get_url:
     url: "{{ asset_url }}"
-    dest: "{{ temp_output.path.stdout }}/{{ asset_name }}"
+    dest: "{{ temp_output.path }}/{{ asset_name }}"
 
 - name: Unarchive the archive
   unarchive:
     src: "{{ temp_output.path.stdout }}/{{ asset_name }}"
-    dest: "{{ temp_output.path.stdout }}"
+    dest: "{{ temp_output.path }}"
 
 - name: Get the tgz dir name
   shell: 'set -o pipefail && true | echo {{ asset_name }} | sed "s/.zip$//" | sed "s/.tgz$//"'
@@ -38,7 +38,7 @@
 
 - name: Move the executable to the requested directory
   copy:
-    src: "{{ temp_output.path.stdout }}/{{ asset_dir.stdout }}/minishift"
+    src: "{{ temp_output.path }}/{{ asset_dir.stdout }}/minishift"
     dest: "{{ minishift_dest }}/minishift"
     remote_src: yes
     mode: 0775
@@ -46,5 +46,5 @@
 
 - name: Remove the temp directory
   file:
-    path: "{{ temp_output.path.stdout }}"
+    path: "{{ temp_output.path }}"
     state: absent
