--- a/tasks/nginxplus.yml
+++ b/tasks/nginxplus.yml
@@ -35,24 +35,52 @@
     executable: /bin/bash
   changed_when: false
 
-- name: Log in as developer
-  command: oc login -u developer -p developer -n default
+- name: Set minishift docker variables
+  shell: "set -o pipefail && true | eval $(minishift docker-env)"
+  args:
+    executable: /bin/bash
   changed_when: false
+
+- name: Get admin token
+  command: oc whoami -t
+  register: admintoken
+
+- name: Get docker repository location
+  command: minishift openshift registry
+  register: dockerreg
 
 - name: Logon to MiniShift private repository
-  command: "docker login -u developer -p $(oc whoami -t) $(minishift openshift registry)"
+  shell: "set -o pipefail && true | eval $(minishift docker-env) && docker login -p {{ admintoken.stdout }} -u unused {{ dockerreg.stdout }}"
+  args:
+    executable: /bin/bash
   changed_when: false
 
+#- name: Logon to MiniShift private repository
+#  command: "docker login -p {{ admintoken.stdout }} -u unused {{ dockerreg.stdout }}"
+#  changed_when: false
+
 - name: Tag NGINX Plus docker image
-  command: docker tag nginx-plus-openshift-router:0.2 $(minishift openshift registry)/openshift/nginx-plus-openshift-router:0.2
+  command: "docker tag nginx-plus-openshift-router:0.2 {{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2"
   args:
     chdir: "{{ tmp_path }}/nginx-openshift-router/src/nginx-plus"
   changed_when: false
 
 - name: Push NGINX Plus docker image
-  command: docker push $(minishift openshift registry)/openshift/nginx-plus-openshift-router:0.2
+  command: "docker push {{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2"
   args:
     chdir: "{{ tmp_path }}/nginx-openshift-router/src/nginx-plus"
+  changed_when: false
+
+- name: Backup default Router configuration
+  command: oc get -o yaml service/router dc/router clusterrolebinding/router-router-role serviceaccount/router > default-router-backup.yaml
+  changed_when: false
+
+- name: Delete Router
+  command: oc delete -f default-router-backup.yaml
+  changed_when: false
+
+- name: Deploy NGINX Plus router
+  command: "oc adm router router --images={{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2 --type=''"
   changed_when: false
 
 - name: Remove the temp directory
