--- a/tasks/grant_admin.yml
+++ b/tasks/grant_admin.yml
@@ -3,13 +3,10 @@
   changed_when: false
 
 - name: Grant cluster-admin to developer
-  command: oc adm policy add-cluster-role-to-user cluster-admin admin
+  command: 
+  ignore_errors: true
   changed_when: false
 
 - name: Log in as admin
-  command: oc login -u admin -p admin
-  changed_when: false
-
-- name: Set the namespace to 'default'
-  command: oc project default
+  command: oc login -u admin -p admin -n default
   changed_when: false
