added command that was misisng

--- a/tasks/grant_admin.yml
+++ b/tasks/grant_admin.yml
@@ -2,8 +2,8 @@
   command: oc login -u system:admin
   changed_when: false
 
-- name: Grant cluster-admin to developer
-  command: 
+- name: Grant cluster-admin to admin
+  command: oc adm policy add-cluster-role-to-user cluster-admin admin
   ignore_errors: true
   changed_when: false
 
