--- a/tasks/nginxplus.yml
+++ b/tasks/nginxplus.yml
@@ -43,10 +43,6 @@
     executable: /bin/bash
   changed_when: false
 
-#- name: Logon to MiniShift private repository
-#  command: "docker login -p {{ admintoken.stdout }} -u unused {{ dockerreg.stdout }}"
-#  changed_when: false
-
 - name: Tag NGINX Plus docker image
   command: "docker tag nginx-plus-openshift-router:0.2 {{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2"
   args:
@@ -60,16 +56,23 @@
   changed_when: false
 
 - name: Backup default Router configuration
-  command: oc get -o yaml service/router dc/router clusterrolebinding/router-router-role serviceaccount/router > default-router-backup.yaml
+  command: "oc get -o yaml service/router dc/router clusterrolebinding/router-router-role serviceaccount/router > {{ tmp_path }}/default-router-backup.yaml"
   changed_when: false
 
 - name: Delete Router
-  command: oc delete -f default-router-backup.yaml
+  command: "oc delete -f {{ tmp_path }}/default-router-backup.yaml"
   changed_when: false
 
 - name: Deploy NGINX Plus router
   command: "oc adm router router --images={{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2 --type=''"
   changed_when: false
+
+- name: Copy default-router-backup.yaml to $HOME
+  copy:
+    src: "{{ tmp_path }}/default-router-backup.yaml"
+    dest: $HOME
+    remote_src: yes
+    backup: yes
 
 - name: Remove the temp directory
   file:
