--- a/tasks/nginxplus.yml
+++ b/tasks/nginxplus.yml
@@ -56,23 +56,22 @@
   changed_when: false
 
 - name: Backup default Router configuration
-  command: "oc get -o yaml service/router dc/router clusterrolebinding/router-router-role serviceaccount/router > {{ tmp_path }}/default-router-backup.yaml"
+  command: "oc get -o yaml service/router dc/router clusterrolebinding/router-router-role serviceaccount/router"
   changed_when: false
 
+- name: Write default backup Router configuration to a file
+  local_action:
+    copy:
+      content: "{{ router }}"
+      dest: "$HOME/default-router-backup.yml"
+
 - name: Delete Router
-  command: "oc delete -f {{ tmp_path }}/default-router-backup.yaml"
+  command: "oc delete -f $HOME/default-router-backup.yml"
   changed_when: false
 
 - name: Deploy NGINX Plus router
   command: "oc adm router router --images={{ dockerreg.stdout }}/openshift/nginx-plus-openshift-router:0.2 --type=''"
   changed_when: false
-
-- name: Copy default-router-backup.yaml to $HOME
-  copy:
-    src: "{{ tmp_path }}/default-router-backup.yaml"
-    dest: $HOME
-    remote_src: yes
-    backup: yes
 
 - name: Remove the temp directory
   file:
